2008-06-26  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/gstmodule.c: (pygstminiobject_from_gvalue):
	Return None if GstMiniObject GValue doesn't contain anything (NULL).
	Fixes #540221

2008-06-20  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Bump version back to dev -> 0.10.12.1

=== release 0.10.12 ===

2008-06-18  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac:
	  releasing 0.10.12, "A Wild Finish"

2008-06-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.10.11.3 pre-release

2008-06-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/__init__.py:
	* gst/gstelement.override:
	* testsuite/test_element.py:
	Revert 2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>
	Re-opens #530417

2008-06-12  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/gstpad.override:
	* testsuite/test_pad.py:
	Revert 2008-02-10  Alessandro Decina  <alessandro@nnva.org>
	Re-opens #514717

2008-06-05  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.11.2 pre-release

2008-05-26  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/gstevent.override:
	gst_event_new_tag takes ownership of the GstTagList given
	as argument, therefore make a copy before calling the
	C function.
	Fixes #534888

2008-05-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/extend/discoverer.py:
	Add timeout property.
	Fix typos.
	Beautify debugging.
	Fix email.

2008-05-14  Edward Hervey  <edward.hervey@collabora.co.uk>

	Patch by: Jan Schmidt <thaytan at mad dot scientist dot com>
	* gst/__init__.py:
	Make gst.Fraction simplify like the C counterpart
	Fixes #532809

2008-05-14  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/gstcaps.override:
	Fix typo

2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	Patch by: Johan Dahlin  <johan at gnome dot org>
	* gst/__init__.py:
	* gst/gstelement.override:
	* testsuite/test_element.py:
	New 'fancy' constructor for gst.Element, allows creating elements in a