@@ -25,6 +25,8 @@ headers
 # include <config.h>
 #endif
 
+#define NO_IMPORT_PYGOBJECT
+
 #include "common.h"
 
 #include <gst/gst.h>
